Add circleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,26 @@
 version: 2.1
+orbs:
+  elixir: membraneframework/elixir@1
+  codecov: codecov/codecov@3.2.4
 
 jobs:
   test:
+    docker:
+      - image: membraneframeworklabs/docker_membrane:latest
+        environment:
+          MIX_ENV: test
+
     steps:
       - checkout
       - run: mix deps.get
-      - run: mix test
+      - run: coveralls.json
+      - codecov/upload
 
 workflows:
-  version: 2.1
+  version: 2
   build:
     jobs:
+      - elixir/build_test
       - test
+      - elixir/lint:
+          docs: false
