--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - checkout
       - run: mix deps.get
-      - run: coveralls.json
+      - run: mix coveralls.json
       - codecov/upload
 
 workflows:
