--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,10 @@ tags
 !.vscode/launch.json
 !.vscode/extensions.json
 
+### IntelliJ IDEA
+.idea
+*.iml
+
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
