--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -1,9 +1,7 @@
-name: Create and publish Docker image
+name: Build and publish Docker image
 
 on:
   push:
-    branches:
-      - main
     tags:
       - "v*.*.*"
 
@@ -19,9 +17,11 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v3
+      - uses: Setup QEMU
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Build image 
+      - name: Login to Container Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -41,3 +41,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{  steps.meta.outputs.tags }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
