Update Docker setup instructions

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
+
 VIRTUAL_HOST=localhost
+SECRET_KEY_BASE=super-secret-key
+WEBRTC_USED=true
 INTEGRATED_TURN_IP=127.0.0.1
-SECRET_KEY_BASE="super-secret-key"
+INTEGRATED_TURN_PORT_RANGE=50000-65355
+INTEGRATED_TCP_TURN_PORT=49999
