--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,13 @@
-
-VIRTUAL_HOST=localhost
+# used by the server e.g. to create tokens
 SECRET_KEY_BASE=super-secret-key
+
+# true, if WebRTC peers are used
 WEBRTC_USED=true
+
+# hostname used to generate URLs throught the server
+VIRTUAL_HOST=localhost
+
+# TURN default configuration
 INTEGRATED_TURN_IP=127.0.0.1
 INTEGRATED_TURN_PORT_RANGE=50000-65355
 INTEGRATED_TCP_TURN_PORT=49999
