--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,7 @@ WEBRTC_USED=true
 VIRTUAL_HOST=localhost
 
 # TURN default configuration
+# note: loopback address as INTEGRATED_TURN_IP cannot be used inside a Docker container
 INTEGRATED_TURN_IP=127.0.0.1
 INTEGRATED_TURN_PORT_RANGE=50000-65355
 INTEGRATED_TCP_TURN_PORT=49999
