--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -3,7 +3,7 @@ name: Build and publish Docker image
 on:
   push:
     branches:
-      - add-edge-docker-image
+      - main
     tags:
       - "v*.*.*"
 
@@ -37,7 +37,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}}
-            type=edge,branch=add-edge-docker-image
+            type=edge,branch=main
             
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
