Modify default INTEGRATED_TURN_LISTEN_IP

--- a/.env.sample
+++ b/.env.sample
@@ -9,5 +9,6 @@ VIRTUAL_HOST=localhost
 
 # TURN default configuration
 # note: loopback address as INTEGRATED_TURN_IP cannot be used inside a Docker container
-INTEGRATED_TURN_IP=192.168.0.1
+INTEGRATED_TURN_IP=<your_public_ip_address>
+INTEGRATED_TURN_LISTEN_IP=0.0.0.0
 INTEGRATED_TURN_PORT_RANGE=50000-65355
