add simple hls endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/c,vim,linux,macos,elixir,windows,visualstudiocode
+
+# asdf
+.tool-versions
