--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "protos"]
   path = protos
   url = https://github.com/jellyfish-dev/protos.git
-  branch = room-state-video-encoding
+  branch = master
