--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,29 @@
 version: "3"
 
+x-jellyfish-template: &jellyfish-template
+  build: .
+  environment: &jellyfish-environment
+    ERLANG_COOKIE: "panuozzo-pollo-e-pancetta"
+    SERVER_API_TOKEN: "development"
+    SECRET_KEY_BASE: "super-secret-key"
+    VIRTUAL_HOST: "localhost"
+    NODES: "app@app1 app@app2"
+  networks:
+    - net1
+  restart: on-failure
+  healthcheck:
+    test:
+      [
+        "CMD",
+        "sh",
+        "-c",
+        "curl --fail -H \"authorization: Bearer $$SERVER_API_TOKEN\" http://localhost:$$PORT/room || exit 1"
+      ]
+    interval: 3s
+    retries: 2
+    timeout: 2s
+    start_period: 15s
+
 services:
   test:
     image: membraneframeworklabs/docker_membrane
@@ -21,52 +45,24 @@ services:
       - app2
 
   app1:
-    build: .
-    restart: on-failure
-    healthcheck:
-      test: >
-        curl --fail -H "authorization: Bearer development" http://localhost:4001/room || exit 1
-      interval: 3s
-      retries: 2
-      timeout: 2s
-      start_period: 15s
+    <<: *jellyfish-template
     environment:
-      ERLANG_COOKIE: "panuozzo-pollo-e-pancetta"
-      SERVER_API_TOKEN: "development"
-      SECRET_KEY_BASE: "super-secret-key"
-      VIRTUAL_HOST: "localhost"
+      <<: *jellyfish-environment
       RELEASE_NODE: app@app1
       NODE_NAME: app@app1
       PORT: 4001
-      NODES: "app@app1 app@app2"
     ports:
       - 4001:4001
-    networks:
-      - net1
 
   app2:
-    build: .
-    restart: on-failure
-    healthcheck:
-      test: >
-        curl --fail -H "authorization: Bearer development" http://localhost:4002/room || exit 1
-      interval: 3s
-      retries: 2
-      timeout: 2s
-      start_period: 15s
+    <<: *jellyfish-template
     environment:
-      ERLANG_COOKIE: "panuozzo-pollo-e-pancetta"
-      SERVER_API_TOKEN: "development"
-      SECRET_KEY_BASE: "super-secret-key"
-      VIRTUAL_HOST: "localhost"
+      <<: *jellyfish-environment
       RELEASE_NODE: app@app2
       NODE_NAME: app@app2
       PORT: 4002
-      NODES: "app@app1 app@app2"
     ports:
       - 4002:4002
-    networks:
-      - net1
 
 networks:
   net1:
