--- a/.github/workflows/enforce-pr-policy.yml
+++ b/.github/workflows/enforce-pr-policy.yml
@@ -7,20 +7,13 @@ on:
       - edited
       - synchronize
 
-env:
-  GH_TOKEN: ${{ github.token }}
-
 jobs:
-  check_pr:
+  check-pr:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
       - name: Check PR
         run: |
-          PR_BASE=$(gh pr view https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }} --json baseRefName -q ".base.ref")
-          PR_HEAD=$(gh pr view https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }} --json headRefName -q ".head.ref")
-          if [[ "$PR_BASE" == "main" ]] && ! [[ "$PR_HEAD" =~ ^dev$|^fix/ ]]; then
+          if [[ "${{ github.base_ref }}" == "main" ]] && ! [[ "${{ github.head_ref }}" =~ ^dev$|^fix/ ]]; then
             echo 'PRs to branch `main` can only come from branch `dev` or any branch prefixed with `fix/`'
             exit 1
           fi
