Make possible disabling check_origin

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,9 @@ WEBRTC_USED=true
 # hostname used to generate URLs throught the server
 VIRTUAL_HOST=localhost
 
+# Decide if jellyfish will check origin of requests
+# CHECK_ORIGIN=false
+
 # TURN default configuration
 # note: loopback address as INTEGRATED_TURN_IP cannot be used inside a Docker container
 INTEGRATED_TURN_IP=<your_public_ip_address>
