add creating multipart room

--- a/.gitignore
+++ b/.gitignore
@@ -185,6 +185,12 @@ $RECYCLE.BIN/
 # Default Jellyfish output directory
 jellyfish_output
 
-
 # asdf
 .tool-versions
+
+# direnv
+.envrc
+
+docker-compose-dev.yaml
+Dockerfile-apk-rust
+
