Update env sample

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,8 @@ WEBRTC_USED=true
 
 # hostname used to generate URLs throught the server
 VIRTUAL_HOST=localhost
+PORT=5002
+SERVER_API_TOKEN=development
 
 # Decide if jellyfish will check origin of requests
 # CHECK_ORIGIN=false
