Remove JF_HOST_PORT. Update comments in .env.sample.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,6 @@ x-jellyfish-template: &jellyfish-template
   environment: &jellyfish-environment
     ERLANG_COOKIE: "panuozzo-pollo-e-pancetta"
     JF_SERVER_API_TOKEN: "development"
-    JF_HOST: "localhost"
     JF_NODES: "app@app1 app@app2"
   networks:
     - net1
@@ -37,6 +36,7 @@ services:
       <<: *jellyfish-environment
       RELEASE_NODE: app@app1
       NODE_NAME: app@app1
+      JF_HOST: "localhost:4001"
       JF_PORT: 4001
     ports:
       - 4001:4001
@@ -47,6 +47,7 @@ services:
       <<: *jellyfish-environment
       RELEASE_NODE: app@app2
       NODE_NAME: app@app2
+      JF_HOST: "localhost:4002"
       JF_PORT: 4002
     ports:
       - 4002:4002
