Update JF_HOST and JF_PORT for Docker

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 # IP and PORT an HTTP endpoint will listen to
+# In Docker, JF_PORT defaults to 8080
 # JF_IP=0.0.0.0
-# JF_PORT=5002
+# JF_PORT=8080
 
 
 # Defines how Jellyfish is seen from the outside.
@@ -9,7 +10,7 @@
 # * fqdn:port
 # * fqdn
 # By default, it is equal to "JF_IP:JF_PORT".
-JF_HOST=localhost:5002
+JF_HOST=localhost:8080
 
 # JF_METRICS_IP=0.0.0.0
 # JF_METRICS_PORT=9568
