--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,8 @@ x-jellyfish-template: &jellyfish-template
   build: .
   environment: &jellyfish-environment
     ERLANG_COOKIE: "panuozzo-pollo-e-pancetta"
-    SERVER_API_TOKEN: "development"
-    HOST: "localhost"
-    NODES: "app@app1 app@app2"
+    JF_SERVER_API_TOKEN: "development"
+    JF_NODES: "app@app1 app@app2"
   networks:
     - net1
   restart: on-failure
@@ -37,7 +36,8 @@ services:
       <<: *jellyfish-environment
       RELEASE_NODE: app@app1
       NODE_NAME: app@app1
-      PORT: 4001
+      JF_HOST: "localhost:4001"
+      JF_PORT: 4001
     ports:
       - 4001:4001
 
@@ -47,7 +47,8 @@ services:
       <<: *jellyfish-environment
       RELEASE_NODE: app@app2
       NODE_NAME: app@app2
-      PORT: 4002
+      JF_HOST: "localhost:4002"
+      JF_PORT: 4002
     ports:
       - 4002:4002
 
