--- a/.env.sample
+++ b/.env.sample
@@ -15,6 +15,21 @@ JF_HOST=localhost:8080
 # JF_METRICS_IP=0.0.0.0
 # JF_METRICS_PORT=9568
 
+# Defines whether to run Jellyfish in a cluster
+# JF_DIST_ENABLED=false
+
+# Node name used in a cluster.
+# The first part can be any string.
+# The second part has to be Jellyfish address
+# it is accessible on
+# JF_NODE_NAME=jellyfish1@127.0.0.1
+
+# Used for grouping Jellyfishes in a cluster
+# JF_COOKIE=jellyfishclustercookie
+
+# List of other Jellyfishes we should try to connect to form a cluster
+# JF_NODES="jellyfish2@127.0.0.1 jellyfish3@127.0.0.1"
+
 # Token used for authorizing HTTP requests
 JF_SERVER_API_TOKEN=jellyfish_docker_token
 
