Add JF_DIST_MIN_PORT and JF_DIST_MAX_PORT

--- a/.env.sample
+++ b/.env.sample
@@ -30,6 +30,12 @@ JF_HOST=localhost:8080
 # List of other Jellyfishes we should try to connect to form a cluster
 # JF_NODES="jellyfish2@127.0.0.1 jellyfish3@127.0.0.1"
 
+# Ports used by Jellyfish when forming a cluster.
+# Besides them, Jellyfish also uses one more service
+# called EPMD, which uses port 4369.
+# JF_DIST_MIN_PORT=9000
+# JF_DIST_MAX_PORT=9000
+
 # Token used for authorizing HTTP requests
 JF_SERVER_API_TOKEN=jellyfish_docker_token
 
