Set default cookie value

--- a/.env.sample
+++ b/.env.sample
@@ -25,7 +25,9 @@ JF_HOST=localhost:8080
 # JF_NODE_NAME=jellyfish1@127.0.0.1
 
 # Used for grouping Jellyfishes in a cluster
-# JF_COOKIE=jellyfishclustercookie
+# Use different cookies when you want to form 
+# multiple clusters running on shared machines.
+# JF_COOKIE=panuozzo-pollo-e-pancetta
 
 # List of other Jellyfishes we should try to connect to form a cluster
 # JF_NODES="jellyfish2@127.0.0.1 jellyfish3@127.0.0.1"
