--- a/.env.sample
+++ b/.env.sample
@@ -20,8 +20,7 @@ JF_HOST=localhost:8080
 
 # Node name used in a cluster.
 # The first part can be any string.
-# The second part has to be Jellyfish address
-# it is accessible on
+# The second part has to be Jellyfish address # it is accessible on.
 # JF_NODE_NAME=jellyfish1@127.0.0.1
 
 # Used for grouping Jellyfishes in a cluster
