--- a/.env.sample
+++ b/.env.sample
@@ -20,16 +20,16 @@ JF_HOST=localhost:8080
 
 # Node name used in a cluster.
 # The first part can be any string.
-# The second part has to be Jellyfish address # it is accessible on.
-# JF_NODE_NAME=jellyfish1@127.0.0.1
+# The second part has to be Jellyfish address it is accessible on.
+# JF_DIST_NODE_NAME=jellyfish1@127.0.0.1
 
 # Used for grouping Jellyfishes in a cluster
 # Use different cookies when you want to form 
 # multiple clusters running on shared machines.
-# JF_COOKIE=panuozzo-pollo-e-pancetta
+# JF_DIST_COOKIE=panuozzo-pollo-e-pancetta
 
 # List of other Jellyfishes we should try to connect to form a cluster
-# JF_NODES="jellyfish2@127.0.0.1 jellyfish3@127.0.0.1"
+# JF_DIST_NODES="jellyfish2@127.0.0.1 jellyfish3@127.0.0.1"
 
 # Ports used by Jellyfish when forming a cluster.
 # Besides them, Jellyfish also uses one more service
@@ -63,7 +63,7 @@ JF_WEBRTC_USED=true
 
 # TURN default configuration
 # note: loopback address as INTEGRATED_TURN_IP cannot be used inside a Docker container
-# note: when running locally, JF_INTEGRATED_TURN_IP can be your private ip address 
-JF_INTEGRATED_TURN_IP=<your_public_ip_address>
-JF_INTEGRATED_TURN_LISTEN_IP=0.0.0.0
-JF_INTEGRATED_TURN_PORT_RANGE=50000-50050
+# note: when running locally, JF_WEBRTC_TURN_IP can be your private ip address 
+JF_WEBRTC_TURN_IP=<your_public_ip_address>
+JF_WEBRTC_TURN_LISTEN_IP=0.0.0.0
+JF_WEBRTC_TURN_PORT_RANGE=50000-50050
