--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ x-jellyfish-template: &jellyfish-template
     JF_SERVER_API_TOKEN: "development"
     JF_DIST_ENABLED: "true"
     JF_DIST_MODE: "sname"
-    JF_NODES: "app@app1 app@app2"
+    JF_DIST_NODES: "app@app1 app@app2"
   networks:
     - net1
   restart: on-failure
@@ -37,7 +37,7 @@ services:
       <<: *jellyfish-environment
       JF_HOST: "localhost:4001"
       JF_PORT: 4001
-      JF_NODE_NAME: app@app1
+      JF_DIST_NODE_NAME: app@app1
     ports:
       - 4001:4001
 
@@ -47,7 +47,7 @@ services:
       <<: *jellyfish-environment
       JF_HOST: "localhost:4002"
       JF_PORT: 4002
-      JF_NODE_NAME: app@app2
+      JF_DIST_NODE_NAME: app@app2
     ports:
       - 4002:4002
 
