Explain JF_DIST_MODE

--- a/.env.sample
+++ b/.env.sample
@@ -19,9 +19,23 @@ JF_HOST=localhost:8080
 # JF_DIST_ENABLED=false
 
 # Node name used in a cluster.
-# The first part can be any string.
-# The second part has to be Jellyfish address it is accessible on.
+# It consists of two parts - nodename@hostname.
+# The first part identifies a node on a single machine and can
+# be any string.
+# The second part identifies the host machine and has to be an 
+# ip address or FQDN of a machine Jellyfish runs on.
+# If you run a cluster on a single machine or in the same docker network
+# and you don't want to use ip addresses or FQDN as hostnames, 
+# you can use short names (see JF_DIST_MODE).
 # JF_DIST_NODE_NAME=jellyfish1@127.0.0.1
+
+# Distribution mode - can be `name` or `sname`.
+# When using `name`, your hostname has to be 
+# an ip address or FQDN of a machine Jellyfish runs on.
+# When using `sname`, your hostname can be any string
+# See our docker-compose.yaml, which we use in our
+# integration tests for an example.
+# JF_DIST_MODE=name
 
 # Used for grouping Jellyfishes in a cluster
 # Use different cookies when you want to form 
