Mention about JF_DIST_MIN/MAX_PORT availability

--- a/.env.sample
+++ b/.env.sample
@@ -48,6 +48,8 @@ JF_HOST=localhost:8080
 # Ports used by Jellyfish when forming a cluster.
 # Besides them, Jellyfish also uses one more service
 # called EPMD, which uses port 4369.
+# Note: those variables only take an effect in docker or
+# after doing `mix release`.
 # JF_DIST_MIN_PORT=9000
 # JF_DIST_MAX_PORT=9000
 
