Refactor .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,9 @@
+## GENERAL ENVS ##
+
 # IP and PORT an HTTP endpoint will listen to
 # In Docker, JF_PORT defaults to 8080
 # JF_IP=0.0.0.0
 # JF_PORT=8080
-
 
 # Defines how Jellyfish is seen from the outside.
 # It can be in one of the following forms:
@@ -14,6 +15,26 @@ JF_HOST=localhost:8080
 
 # JF_METRICS_IP=0.0.0.0
 # JF_METRICS_PORT=9568
+
+# Token used for authorizing HTTP requests
+JF_SERVER_API_TOKEN=jellyfish_docker_token
+
+# Used by the server e.g. to create client tokens.
+# If not set, it will be generated.
+# JF_SECRET_KEY_BASE=super-secret-key
+
+# Decide if jellyfish will check origin of requests
+# JF_CHECK_ORIGIN=true
+
+# Where Jellyfish should save its artifacts
+# You can get access to this directory e.g. by mounting 
+# a volume with:
+#
+#   -v $(pwd)/jellyfish_output:/app/jellyfish_output 
+#
+# JF_OUTPUT_BASE_PATH=/app/jellyfish_output
+
+## DISTRIBUTION ENVS ##
 
 # Defines whether to run Jellyfish in a cluster
 # JF_DIST_ENABLED=false
@@ -53,26 +74,7 @@ JF_HOST=localhost:8080
 # JF_DIST_MIN_PORT=9000
 # JF_DIST_MAX_PORT=9000
 
-# Token used for authorizing HTTP requests
-JF_SERVER_API_TOKEN=jellyfish_docker_token
-
-# Used by the server e.g. to create client tokens.
-# If not set, it will be generated.
-# JF_SECRET_KEY_BASE=super-secret-key
-
-# Decide if jellyfish will check origin of requests
-# JF_CHECK_ORIGIN=true
-
-# Where Jellyfish should save its artifacts
-# You can get access to this directory e.g. by mounting 
-# a volume with:
-#
-#   -v $(pwd)/jellyfish_output:/app/jellyfish_output 
-#
-# JF_OUTPUT_BASE_PATH=/app/jellyfish_output
-
-
-# WEBRTC ENVS
+## WEBRTC ENVS ##
 
 # true, if WebRTC peers are used
 JF_WEBRTC_USED=true
