--- a/docker-compose-dns.yaml
+++ b/docker-compose-dns.yaml
@@ -37,45 +37,52 @@ services:
       <<: *jellyfish-environment
       JF_HOST: "localhost:4001"
       JF_PORT: 4001
-      JF_DIST_NODE_NAME: app@app1.dns-network
-      JF_DIST_NODE_BASENAME: "app"
-      JF_DIST_QUERY: "app2.dns-network"
+      JF_DIST_NODE_NAME: app@172.28.1.2
+      JF_DIST_NODE_BASENAME: app
+      JF_DIST_QUERY: app.dns-network
     ports:
       - 4001:4001
     networks:
       dns-network:
+        ipv4_address: 172.28.1.2
         aliases:
-          - app1
+          - app.dns-network
     dns:
-      - dnsmasq
+      - 172.28.1.4:5353
 
   app2:
+    container_name: name
     <<: *jellyfish-template
     environment:
       <<: *jellyfish-environment
       JF_HOST: "localhost:4002"
       JF_PORT: 4002
-      JF_DIST_NODE_NAME: app@app2.dns-network
-      JF_DIST_NODE_BASENAME: "app"
-      JF_DIST_QUERY: "app1.dns-network"
+      JF_DIST_NODE_NAME: app@172.28.1.3
+      JF_DIST_NODE_BASENAME: app
+      JF_DIST_QUERY: app.dns-network
     ports:
       - 4002:4002
     networks:
       dns-network:
+        ipv4_address: 172.28.1.3
         aliases:
-          - app2
+          - app.dns-network
     dns:
-      - dnsmasq
+      - 172.28.1.4:5353
 
   dnsmasq:
     image: andyshinn/dnsmasq:2.78
     volumes:
       - /etc/resolv.conf:/etc/resolv.dnsmasq.conf
-    command: -d -q --no-hosts --no-resolv --no-poll --server 127.0.0.11 --listen-address 0.0.0.0 --port 53 --log-queries --log-facility=- --address=/./127.0.0.11
+    command: -d -q --no-hosts --no-resolv --no-poll --server 127.0.0.11 --listen-address 0.0.0.0 --port 5353 --log-queries --log-facility=- --address=/./127.0.0.11
     networks:
       dns-network:
+        ipv4_address: 172.28.1.4
         aliases:
           - dnsmasq
 
 networks:
   dns-network:
+    ipam:
+      config:
+        - subnet: 172.28.1.0/24
