--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,9 @@ jobs:
     executor: machine_executor_amd64
     steps:
       - checkout
-      - run: docker compose run test
+      - run: docker compose -f docker-compose-epmd.yaml up test --exit-code-from test
       - run: docker compose down
-      - run: docker compose -f docker-compose-dns.yaml down
-      - run: docker compose -f docker-compose-dns.yaml up test
+      - run: docker compose -f docker-compose-dns.yaml up test --exit-code-from test
     
   test:
     docker:
