--- a/docker-compose-dns.yaml
+++ b/docker-compose-dns.yaml
@@ -64,6 +64,7 @@ services:
       - 4002:4002
     networks:
       dns-network:
+        # Register IP under alias
         ipv4_address: 172.28.1.3
         aliases:
           - app.dns-network
