[RTC 389] Add DNSpoll distribution strategy (#109)
* Add DNS strategy

* Add CI for DNS cluster

* Changes after review

* Fix credo issues

* Add spec for read_boolean

* Remove JF_DIST_NODE_BASENAME

* Update lib/jellyfish/config_reader.ex

Co-authored-by: Michał Śledź <michalsledz34@gmail.com>

* Update lib/jellyfish/config_reader.ex

Co-authored-by: Michał Śledź <michalsledz34@gmail.com>

* Update test/jellyfish/config_reader_test.exs

Co-authored-by: Michał Śledź <michalsledz34@gmail.com>

* Update test/jellyfish/config_reader_test.exs

Co-authored-by: Michał Śledź <michalsledz34@gmail.com>

* Update lib/jellyfish/config_reader.ex

Co-authored-by: Michał Śledź <michalsledz34@gmail.com>

* Update lib/jellyfish/config_reader.ex

Co-authored-by: Michał Śledź <michalsledz34@gmail.com>

* Remove spec

* Add do_read_nodes_list_config

---------

Co-authored-by: Michał Śledź <michalsledz34@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,9 @@ jobs:
     executor: machine_executor_amd64
     steps:
       - checkout
-      - run: docker compose run test
+      - run: docker compose -f docker-compose-epmd.yaml up test --exit-code-from test
+      - run: docker compose -f docker-compose-epmd.yaml down 
+      - run: docker compose -f docker-compose-dns.yaml up test --exit-code-from test
     
   test:
     docker:
