--- a/.env.sample
+++ b/.env.sample
@@ -30,9 +30,9 @@ JF_SERVER_API_TOKEN=jellyfish_docker_token
 # You can get access to this directory e.g. by mounting 
 # a volume with:
 #
-#   -v $(pwd)/jellyfish_output:/app/jellyfish_output 
+#   -v $(pwd)/jellyfish_media_files:/app/jellyfish_media_files 
 #
-# JF_OUTPUT_BASE_PATH=/app/jellyfish_output
+# JF_MEDIA_FILES_PATH=/app/jellyfish_media_files
 
 ## DISTRIBUTION ENVS ##
 
