--- a/.gitignore
+++ b/.gitignore
@@ -183,7 +183,7 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/c,vim,linux,macos,elixir,windows,visualstudiocode
 
 # Default Jellyfish output directory
-jellyfish_output
+jellyfish_media_files
 
 
 # asdf
