--- a/docker-compose-epmd.yaml
+++ b/docker-compose-epmd.yaml
@@ -11,7 +11,7 @@ x-jellyfish-template: &jellyfish-template
 
 services:
   test:
-    image: membraneframeworklabs/docker_membrane
+    image: membraneframeworklabs/docker_membrane:latest
     command:
       - sh
       - -c
