[RTC-398] File component (#123)
* Change metadata to properties

* generate openapi

* Rename metadata to properties

* Add file component

* Improve tests

* Fix test-helper

* Fix subscription tests

* Improve validating path

* Restrict file component sources to  directory

* File endpoint autoplay

* File sources stored in subdirectory

* Fix engine termination

* Format

* docker

* Fix precompiled deps

* Fix checking relative directory

* Update engine dep

* Create file component sources in dockerfile

* Improve component controller responses

* Update api spec comment

* Fix unsupported file type

* Fix api.spec

--- a/.env.sample
+++ b/.env.sample
@@ -30,9 +30,9 @@ JF_SERVER_API_TOKEN=jellyfish_docker_token
 # You can get access to this directory e.g. by mounting 
 # a volume with:
 #
-#   -v $(pwd)/jellyfish_output:/app/jellyfish_output 
+#   -v $(pwd)/jellyfish_resources:/app/jellyfish_resources 
 #
-# JF_OUTPUT_BASE_PATH=/app/jellyfish_output
+# JF_RESOURCES_BASE_PATH=/app/jellyfish_resources
 
 ## DISTRIBUTION ENVS ##
 
