--- a/.gitignore
+++ b/.gitignore
@@ -182,8 +182,8 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/c,vim,linux,macos,elixir,windows,visualstudiocode
 
-# Default Jellyfish output directory
-jellyfish_output
+# Default Jellyfish directory for storing multimedia files
+jellyfish_resources
 
 
 # asdf
