--- a/docker-compose-dns.yaml
+++ b/docker-compose-dns.yaml
@@ -5,6 +5,7 @@ x-jellyfish-template: &jellyfish-template
   environment: &jellyfish-environment
     JF_SERVER_API_TOKEN: "development"
     JF_DIST_ENABLED: "true"
+    JF_DIST_MODE: "name"
     JF_DIST_STRATEGY_NAME: "DNS"
   restart: on-failure
 
