[RTC-405] Resolve FQDNs in DNS cluster strategy (#137)

--- a/docker-compose-dns.yaml
+++ b/docker-compose-dns.yaml
@@ -5,6 +5,7 @@ x-jellyfish-template: &jellyfish-template
   environment: &jellyfish-environment
     JF_SERVER_API_TOKEN: "development"
     JF_DIST_ENABLED: "true"
+    JF_DIST_MODE: "name"
     JF_DIST_STRATEGY_NAME: "DNS"
   restart: on-failure
 
@@ -22,14 +23,9 @@ services:
       - .:/app
       - /app/_build
       - /app/deps
-    networks:
-      dns-network:
-        aliases:
-          - dnsmasq
     depends_on:
       - app1
       - app2
-      - dnsmasq
 
   app1:
     <<: *jellyfish-template
@@ -37,51 +33,24 @@ services:
       <<: *jellyfish-environment
       JF_HOST: "localhost:4001"
       JF_PORT: 4001
-      JF_DIST_NODE_NAME: app@172.28.1.2
       JF_DIST_QUERY: app.dns-network
     ports:
       - 4001:4001
     networks:
-      dns-network:
-        ipv4_address: 172.28.1.2
+      default:
         aliases:
           - app.dns-network
-    dns:
-      - 172.28.1.4:5353
 
   app2:
-    container_name: name
     <<: *jellyfish-template
     environment:
       <<: *jellyfish-environment
       JF_HOST: "localhost:4002"
       JF_PORT: 4002
-      JF_DIST_NODE_NAME: app@172.28.1.3
       JF_DIST_QUERY: app.dns-network
     ports:
       - 4002:4002
     networks:
-      dns-network:
-        # Register IP under alias
-        ipv4_address: 172.28.1.3
+      default:
         aliases:
           - app.dns-network
-    dns:
-      - 172.28.1.4:5353
-
-  dnsmasq:
-    image: andyshinn/dnsmasq:2.78
-    volumes:
-      - /etc/resolv.conf:/etc/resolv.dnsmasq.conf
-    command: -d -q --no-hosts --no-resolv --no-poll --server 127.0.0.11 --listen-address 0.0.0.0 --port 5353 --log-queries --log-facility=- --address=/./127.0.0.11
-    networks:
-      dns-network:
-        ipv4_address: 172.28.1.4
-        aliases:
-          - dnsmasq
-
-networks:
-  dns-network:
-    ipam:
-      config:
-        - subnet: 172.28.1.0/24
