[RTC-435] Add tracks and their metadata (#141)
* Add tracks to state

* Add track metadata

* Log errors

* Fix openapi lint

* Add track meta

* Add peer metadata

* Test for  message in FileComponent test

* Improve handling Engine messages

* Improve logging

* Remove unused deps

* RTC-engine dependency to master

* Improve handling unexpected messages

* Remove track encoding

* Remove unused cases

* Fix logging

* Remove unused deps

* Format

* Fix sending track_removed notifications

* PR remarks

* Synchronize protos

* Add lint ignores

--- a/.redocly.lint-ignore.yaml
+++ b/.redocly.lint-ignore.yaml
@@ -3,3 +3,8 @@
 openapi.yaml:
   no-empty-servers:
     - '#/servers'
+  operation-4xx-response:
+    - '#/paths/~1health/get/responses'
+  spec:
+    - '#/components/schemas/Track/properties/metadata/nullable'
+    - '#/components/schemas/PeerMetadata/nullable'
