Add jf version and commit to healthcheck

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -47,3 +47,4 @@ jobs:
           tags: ${{  steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: JF_GIT_COMMIT=$GITHUB_SHA
