--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -37,6 +37,10 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=edge,branch=main
+      - name: Set short sha
+        shell: bash
+        run: |
+          echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
             
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
@@ -47,3 +51,4 @@ jobs:
           tags: ${{  steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: JF_GIT_COMMIT=${{ env.sha_short }}
