Update circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 executors:
  machine_executor_amd64:
    machine:
-     image: ubuntu-2204:2022.04.2
+     image: default
    environment:
      architecture: "amd64"
      platform: "linux/amd64"
